# toml-validator

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  coverage.yml  dependabot.yml  release-drafter.yml  release.yml  tests.yml
.pytype/: build.ninja
docs/: conf.py  index.rst  reference.rst
src/toml_validator/: __init__.py  __main__.py  console.py  pyproject.toml  validation.py
src/toml_validator/use_cases/: toml.py
tests/: __init__.py  test_console.py  test_main.py  test_validation.py
tests/use_cases/: __init__.py  test_toml.py
