[tool.poetry]
name = "toml-validator"
version = "1.4.0"
description = "Simple TOML file validator using Python."
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/staticdev/toml-validator"
homepage = "https://github.com/staticdev/toml-validator"
documentation = "https://toml-validator.readthedocs.io"

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/toml-validator/releases"

[tool.poetry.dependencies]
python = "^3.7"
tomlkit = ">=0.5.9,<0.8.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
safety = "^1.10.2"
pytest-mock = "^3.5.1"
typeguard = "^2.10.0"
pre-commit = "^2.9.3"
pygments = "^2.7.4"
xdoctest = "^0.15.0"
sphinx = "^3.4.3"
sphinx-autobuild = "^2020.9.1"
darglint = "^1.5.8"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
pre-commit-hooks = "^3.4.0"
reorder-python-imports = "^2.3.6"
mypy = "0.782"

[tool.poetry.scripts]
toml-validator = "toml_validator.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["toml_validator"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
