[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = ""
authors = ["Thiago D'Ávila <thiagocavila@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"] # configure source tree layout

[tool.coverage.run]
branch = true # enable branch analysis
source = ["hypermodern_python"] # configure package name

[tool.coverage.report]
show_missing = true # display line number of missing coverage
fail_under = 100 # set 100% goal for coverage
